manifests/logoutputservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-app-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
