manifests/old_useless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-app-svc
spec:
  type: NodePort
  selector:
    app: server-app
  ports:
    - name: http
      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target port
