manifests/server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-app-svc
spec:
  type: ClusterIP
  selector:
    app: server-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
