manifests/string-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-app-svc
spec:
  type: ClusterIP
  selector:
    app: string-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
