manifests/pingpong-logoutput-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-app-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-app-svc
            port:
              number: 2345
